# projet-mlops

./: .gitignore  README.md  docker-compose.yaml  requirements.txt
backen/: Dockerfile  README.md  pyproject.toml  requirements.txt
backen/configs/: config.yaml
backen/configs/data/: data.yaml
backen/configs/model/: lightgbm.yaml
backen/configs/train/: train.yaml
backen/notebooks/: notebook_mlops.ipynb
backen/outputs/2025-07-19/03-54-25/.hydra/: hydra.yaml
backen/outputs/2025-07-19/03-55-21/.hydra/: hydra.yaml
backen/outputs/2025-07-19/03-58-35/.hydra/: hydra.yaml
backen/src/api/: main.py
backen/src/models/: LGBMRegressor.joblib  main.py  pipeline.joblib
backen/src/models/outputs/2025-07-24/13-54-17/.hydra/: config.yaml  hydra.yaml
backen/src/models/outputs/2025-07-24/13-56-06/.hydra/: hydra.yaml
backen/src/models/outputs/2025-07-24/13-57-46/.hydra/: hydra.yaml
backen/src/models/outputs/2025-07-24/13-59-03/.hydra/: config.yaml  hydra.yaml
backen/src/models/outputs/2025-07-24/13-59-28/.hydra/: config.yaml  hydra.yaml
backen/src/models/outputs/2025-07-24/14-01-50/.hydra/: hydra.yaml
backen/src/models/outputs/2025-07-24/14-05-14/.hydra/: hydra.yaml
backen/src/models/outputs/2025-07-24/14-06-26/.hydra/: hydra.yaml
backen/src/models/outputs/2025-07-24/14-13-37/.hydra/: hydra.yaml
backen/src/models/outputs/2025-07-25/13-56-42/.hydra/: hydra.yaml
backen/src/models/outputs/2025-07-25/13-57-51/.hydra/: config.yaml  hydra.yaml
backen/src/preprocessing/: preprocessing.py
configs/: config.yaml
frontend/: .gitignore  Dockerfile  (+1 more)
(+31 files in other folders)
